--- a/index.html
+++ b/index.html
@@ -14,3 +14,14 @@
 </body>
 
 </html>
+
+<style>
+   *{
+        box-sizing: border-box;
+    }
+    html{
+        height: 100%;
+        margin: 0;
+        font-family: Arial, Verdana, Helvetica, sans-serif;
+    }
+</style>
