--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Self Service Checkin</title>
 </head>
@@ -11,6 +12,9 @@
 <body>
   <div id="app" class="pageapp"></div>
   <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/assets/jquery.min.js"></script>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  
 </body>
 
 </html>
