new registration page update

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </html>
 
-<style>
+<!-- <style>
    *{
         box-sizing: border-box;
     }
@@ -30,4 +30,4 @@
         margin: 0;
         font-family: Arial, Verdana, Helvetica, sans-serif;
     }
-</style>
+</style> -->
