--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <script src="src/assets/moment.min.js"></script>
   <script src="src/assets/countdown.min.js"></script>
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 </body>
 </html>
