--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet">
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet">
-  <link href="/src/assets/datepicker3.css" rel="stylesheet">
+  <link href="./src/assets/datepicker3.css" rel="stylesheet">
   <title>Self Service Checkin</title>
 </head>
 
@@ -15,8 +15,8 @@
   <div id="app" class="pageapp"></div>
   <script type="module" src="src/assets/jquery.min.js"></script>
   <script type="module" src="src/main.js"></script>
-  <script src="src/assets/moment.min.js"></script>
-  <script src="src/assets/countdown.min.js"></script>
+  <script src="./src/assets/moment.min.js"></script>
+  <script src="./src/assets/countdown.min.js"></script>
   <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
 </body>
